--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "c6c6e009",
    "metadata": {},
    "outputs": [
@@ -1101,9 +1101,7 @@
     "for i in a:\n",
     "    print(i)\n",
     "    if i == 3:\n",
-    "        break\n",
-    "    else:\n",
-    "        continue"
+    "        break"
    ]
   },
   {
@@ -1190,29 +1188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "d37cd45e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Breaking the loop when a specific condition is met\n",
     "numbers = [10, 20, 30, 40, 50]\n",
     "for num in numbers:\n",
     "    if num == 30:\n",
     "        pass\n",
-    "    print(num)"
+    "    "
    ]
   },
   {
@@ -1331,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "b4aa7417",
    "metadata": {},
    "outputs": [
@@ -1339,25 +1325,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 1)\n",
-      "(1, 2)\n",
-      "(2, 3)\n",
-      "(3, 4)\n",
-      "(5, 6)\n",
-      "(6, 7)\n",
-      "(7, 8)\n",
-      "(8, 9)\n",
-      "(9, 10)\n"
+      "0 1\n",
+      "1 2\n",
+      "2 3\n",
+      "4 5\n",
+      "5 6\n",
+      "6 7\n",
+      "7 8\n",
+      "8 9\n",
+      "9 10\n"
      ]
     }
    ],
    "source": [
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "\n",
-    "for i in enumerate(numbers):\n",
-    "    if i[0] == 4:\n",
+    "for i, j in enumerate(numbers):\n",
+    "    if i == 3:\n",
     "        continue\n",
-    "    print(i)"
+    "    print(i, j)"
    ]
   },
   {
@@ -1419,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "75c5dbc1",
    "metadata": {},
    "outputs": [
@@ -1452,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "cac87b5a",
    "metadata": {},
    "outputs": [
@@ -1465,7 +1451,13 @@
       "PYT\n",
       "PYTH\n",
       "PYTHO\n",
-      "PYTHON\n"
+      "PYTHON\n",
+      "PYTHO\n",
+      "PYTH\n",
+      "PYT\n",
+      "PY\n",
+      "P\n",
+      "\n"
      ]
     }
    ],
@@ -1474,12 +1466,15 @@
     "x = 0\n",
     "for i in my_string:\n",
     "    x+=1\n",
+    "    print(my_string[0:x])\n",
+    "for i in my_string:\n",
+    "    x-=1\n",
     "    print(my_string[0:x])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "37a61528",
    "metadata": {},
    "outputs": [
@@ -1489,21 +1484,30 @@
      "text": [
       "\n",
       "Pyramid\n",
-      "\n",
       "*\n",
       "**\n",
       "***\n",
       "****\n",
-      "*****\n"
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
      ]
     }
    ],
    "source": [
     "print(\"\\nPyramid\")\n",
-    "for i in range(6):\n",
+    "for i in range(1,6):\n",
     "    x = '*'\n",
     "    x=x*i\n",
-    "    print(f'{x}')"
+    "    print(f'{x}')\n",
+    "    i+=1\n",
+    "    if i == 6:\n",
+    "        for i in range(4, 0, -1):\n",
+    "            x = '*'\n",
+    "            x=x*i\n",
+    "            print(f'{x}')"
    ]
   },
   {
@@ -1575,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "7419fc37",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1589,7 @@
        "[3, 6]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "a3920fa9",
    "metadata": {},
    "outputs": [
@@ -1609,7 +1613,7 @@
        "['W', 'E', 'L', 'C', 'O', 'M', 'E']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,6 +1694,73 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3ec4bfa",
+   "metadata": {},
+   "source": [
+    "Tuple Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a3874632",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 4, 9, 16, 25, 36, 49, 64, 81)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = range(1, 10)\n",
+    "\n",
+    "b = tuple(i**2 for i in a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5ae229a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4, 6, 8, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c  = tuple(i for i in range(1,11) if i % 2==0)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a4d89de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1 : is odd', '2 : is even', '3 : is odd', '4 : is even', '5 : is odd', '6 : is even', '7 : is odd', '8 : is even', '9 : is odd', '10 : is even')\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = tuple(f\"{i} : is even\" if i % 2 == 0 else f\"{i} : is odd\" for i in range(1,11))\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "704e6f48",
    "metadata": {},
    "source": [
@@ -1698,14 +1769,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "20308a0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Earth': ' ',\n",
+       "{'Earth': None,\n",
        " 'Jupiter': 'J',\n",
        " 'Mars': 'M',\n",
        " 'Mercury': 'M',\n",
@@ -1715,20 +1786,39 @@
        " 'Venus': 'V'}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
-    "planet_to_initial = {planet: planet[0] if planet != 'Earth' else \" \" for planet in sorted(planets)}\n",
+    "planet_to_initial = {planet: planet[0] if planet != 'Earth' else None for planet in sorted(planets)}\n",
     "planet_to_initial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
+   "id": "cc4f9c67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'6 : \"even\"', '1 : \"odd\"', '10 : \"even\"', '4 : \"even\"', '2 : \"even\"', '7 : \"odd\"', '8 : \"even\"', '3 : \"odd\"', '5 : \"odd\"', '9 : \"odd\"'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {f\"{i} : \\\"even\\\"\" if i % 2 == 0 else f\"{i} : \\\"odd\\\"\" for i in range(1,11)}\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "cad54a87",
    "metadata": {},
    "outputs": [
@@ -1738,7 +1828,7 @@
        "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
