--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -11,6 +11,7 @@
     "\n",
     "- Functions make our program look simple and organized.\n",
     "- Functions are blocks of reusable code, defined using the def keyword.\n",
+    "- Modularity: Break down complex problems into smaller, manageable parts.\n",
     "\n",
     "**Parameters and Arguments:**\n",
     "\n",
@@ -42,6 +43,8 @@
     "\n",
     "    Functions that are already availabble in Python\n",
     "\n",
+    "    Ex: - min, max, sum, len, Pow, sqrt, mean, median, mode\n",
+    "\n",
     "Let us look at few Built in Function applications:"
    ]
   },
@@ -52,11 +55,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -64,7 +70,7 @@
     "def my_function(parameter1, parameter2):\n",
     "    # Function body\n",
     "    result = parameter1 + parameter2\n",
-    "    return print(result)\n",
+    "    return result\n",
     "\n",
     "#Calling a Function:\n",
     "my_function(1, 2)"
@@ -120,48 +126,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "70d4c7fc",
+   "execution_count": 9,
+   "id": "efd11bf2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "'2 is divisible by 2'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def add_numbers(x=1, y=2):\n",
-    "    result = x + y\n",
-    "    return result\n",
-    "\n",
-    "add_numbers()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ab1cb0e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1102"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "add_numbers(100,1002)"
+    "def div(numbers):\n",
+    "    for num in numbers:\n",
+    "        if num % 2 == 0:\n",
+    "            return f\"{num} is divisible by 2\"\n",
+    "            \n",
+    "numbers = [1,2,3,4,5,6,7,8,9,10]\n",
+    "div(numbers)"
    ]
   },
   {
@@ -174,29 +161,6 @@
     "- Purpose: print is used to output data to the console. It displays the value on the screen.\n",
     "- Usage: Typically used for debugging or providing user feedback.\n",
     "- Effect: It does not affect the flow of a program; it simply shows a value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "79d89f7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "def add():\n",
-    "    x = int(input(\"enter the number\"))\n",
-    "    y = int(input(\"enter the second number\"))\n",
-    "    z = x+y\n",
-    "    print(z)\n",
-    "add ()"
    ]
   },
   {
@@ -218,7 +182,7 @@
     }
    ],
    "source": [
-    "numbers = [1,2,3,4,5,6,7,8,9,10]\n",
+    "numbers = [1,2,3,4,5,6,7,8,9,10] # gloable varibale\n",
     "for num in numbers:\n",
     "    if num % 2 == 0:\n",
     "        print(num)"
@@ -226,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -243,30 +207,28 @@
    ],
    "source": [
     "def div(numbers):\n",
+    "    \n",
     "    for num in numbers:\n",
     "        if num % 2 == 0:\n",
     "            print(f\"{num} is divisible by 2\")\n",
     "            \n",
-    "numbers = [1,2,3,4,5,6,7,8,9,10]\n",
     "div(numbers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "44 is divisible by 2\n",
-      "46 is divisible by 2\n",
-      "48 is divisible by 2\n",
-      "52 is divisible by 2\n",
-      "6 is divisible by 2\n",
-      "512 is divisible by 2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'44 is divisible by 2'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -275,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +246,7 @@
        "[2, 4, 6, 8, 10]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,13 +255,36 @@
     "def divis(numbers):\n",
     "    return[num for num in numbers if num % 2 == 0]\n",
     "\n",
-    "no = [1,2,3,4,5,6,7,8,9,10]\n",
-    "divis(no)"
+    "divis(numbers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
+   "id": "8da74505",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The addition is 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add1():\n",
+    "    A=int(input(\"enter the number\"))\n",
+    "    B=int(input(\"enter the second number\"))\n",
+    "    C = A+B\n",
+    "    print(\"The addition is\",C)\n",
+    "    \n",
+    "add1()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "93c08cd3",
    "metadata": {},
    "outputs": [
@@ -339,7 +324,8 @@
    "source": [
     "#let me greet you with a function\n",
     "def greet(p):\n",
-    "    return print('Hello ', str(p))  \n",
+    "    return print('Hello ', str(p))\n",
+    "  \n",
     "a = 'Rashmi'\n",
     "b = 'Soundrya'\n",
     "c = 'Pavan'\n",
@@ -350,7 +336,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
+   "id": "6df9c5f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello  ('Rashmi', 'Soundrya', 'Pavan')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(*p):\n",
+    "    return print('Hello ', str(p))\n",
+    "  \n",
+    "a = 'Rashmi'\n",
+    "b = 'Soundrya'\n",
+    "c = 'Pavan'\n",
+    "\n",
+    "greet(a,b,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "3c8f3c80",
    "metadata": {},
    "outputs": [
@@ -360,7 +371,7 @@
        "(625, 15625)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,6 +384,27 @@
     "    return a**2, a**3\n",
     "\n",
     "sqcb(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "86d7d3d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThis function returns the square and cube of a given number\\n'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqcb.__doc__"
    ]
   },
   {
@@ -2113,7 +2145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
