--- a/Statistics/Handling_Imbalance_Dataset.ipynb
+++ b/Statistics/Handling_Imbalance_Dataset.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "109e96e0-08bf-4813-909c-e6fd5fdff853",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "abde452c-b1f1-4bd7-b9d6-0e73883d81b2",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "(900, 100)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "04d03122-c2e2-4ef8-9dda-9ed8c8d99eed",
    "metadata": {},
    "outputs": [],
@@ -85,12 +85,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "58f414a8-985c-467b-96e3-df40974714f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "feature_1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "feature_2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "target",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "05c6ebfd-579f-46b3-9b5d-159a161395af",
+       "rows": [
+        [
+         "995",
+         "1.3763708068802365",
+         "2.845701242121474",
+         "1"
+        ],
+        [
+         "996",
+         "2.2398097034287088",
+         "0.8800774861663843",
+         "1"
+        ],
+        [
+         "997",
+         "1.1317603121330273",
+         "1.6407032841014964",
+         "1"
+        ],
+        [
+         "998",
+         "2.902006456318273",
+         "0.39030491588253335",
+         "1"
+        ],
+        [
+         "999",
+         "2.697490154587941",
+         "2.0135700618919765",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -159,7 +221,7 @@
        "999   2.697490   2.013570       1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,19 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "b989d68f-f38b-4edf-ab4b-7be643574f55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "target\n",
        "0    900\n",
        "1    100\n",
-       "Name: target, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "14516002-ea46-43fe-9842-13bbfe816d29",
    "metadata": {},
    "outputs": [],
@@ -205,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "fe628e67-5c13-4040-becb-8a782b2470d2",
    "metadata": {},
    "outputs": [],
@@ -219,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "6d742a1a-059c-43d6-accc-638acf200be0",
    "metadata": {},
    "outputs": [
@@ -229,7 +292,7 @@
        "(900, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,12 +303,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "56d2a178-0dd0-4702-9007-76555c02737d",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "feature_1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "feature_2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "target",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "c3c12a06-6712-4144-b6bd-fa0239c16f85",
+       "rows": [
+        [
+         "951",
+         "1.1258536797316094",
+         "1.8439165482583029",
+         "1"
+        ],
+        [
+         "992",
+         "2.19656961931617",
+         "1.3974247757723512",
+         "1"
+        ],
+        [
+         "914",
+         "1.93216991420193",
+         "2.9980530619517545",
+         "1"
+        ],
+        [
+         "971",
+         "2.272824942065265",
+         "3.034196600361161",
+         "1"
+        ],
+        [
+         "960",
+         "2.8700555088304505",
+         "1.5504853291803062",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -314,7 +439,7 @@
        "960   2.870056   1.550485       1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "7f2a6ef0-8023-43d0-af56-0bbe4e96b974",
    "metadata": {},
    "outputs": [],
@@ -335,19 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "f47db4ac-1ef4-476a-8dfb-3b2374c0bdd8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "target\n",
        "0    900\n",
        "1    900\n",
-       "Name: target, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,27 +561,11 @@
     "         random_state=42\n",
     "        )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5db812b7-e9b6-4ac5-936e-1dce2697ae8a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "329ddfb6-2c1a-4b89-a973-ada272c17a1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -469,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
