--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -409,8 +409,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "19a857bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mod_5(x):\n",
+    "    return x % 5\n",
+    "\n",
+    "mod_5(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8a8e63c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(100, 51, 14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "820bd32c",
    "metadata": {},
    "outputs": [
     {
@@ -423,9 +468,6 @@
     }
    ],
    "source": [
-    "def mod_5(x):\n",
-    "    return x % 5\n",
-    "\n",
     "print(\n",
     "    'Which number is the biggest modulo 5?',\n",
     "    max(100, 51, 14, key=mod_5),\n",
@@ -435,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "366041d0",
    "metadata": {},
    "outputs": [
@@ -445,7 +487,7 @@
        "12"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -477,10 +519,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "edb5f135",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025 not leap year\n"
+     ]
+    }
+   ],
    "source": [
     "year = int(input(\"Enter year: \"))\n",
     "if (year%400==0 and year%100==0) or (year%4==0 and year%100!=0):\n",
@@ -491,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "6597a160",
    "metadata": {},
    "outputs": [
@@ -543,16 +593,32 @@
     }
    ],
    "source": [
-    "def leapyaer(year):\n",
+    "def leapyaer():\n",
     "    for i in range(2000,2040):\n",
     "        year=i\n",
     "        if (year%400==0 and year%100==0) or (year%4==0 and year%100!=0):\n",
     "            print(f\"{year} is leap year\")\n",
     "        else:\n",
     "            print(f\"{year} not leap year\")\n",
-    "        \n",
+    "    \n",
     "leapyaer()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30f4dc67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024 is leap year\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -568,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ee0cd00f",
    "metadata": {},
    "outputs": [
@@ -623,12 +689,13 @@
     "    print(\"Inside the function, y =\", y)  # Accessing the global variable\n",
     "\n",
     "my_function()\n",
+    "\n",
     "print(\"Outside the function, y =\", y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "d853b2ef",
    "metadata": {},
    "outputs": [
@@ -656,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "0e85265e",
    "metadata": {},
    "outputs": [
@@ -696,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "602bcc5b",
    "metadata": {},
    "outputs": [
@@ -706,7 +773,7 @@
        "4"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "127e8e11",
    "metadata": {},
    "outputs": [
@@ -730,7 +797,7 @@
        "21"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +811,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
+   "id": "0eb81b66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024 is leap year\n",
+      "2022 not leap year\n",
+      "2000 is leap year\n",
+      "2002 not leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "def leapyear1(*year):\n",
+    "    for year in year:\n",
+    "        if (year%400==0 and year%100==0) or (year%4==0 and year%100!=0):\n",
+    "            print(f\"{year} is leap year\")\n",
+    "        else:\n",
+    "            print(f\"{year} not leap year\")\n",
+    "        \n",
+    "leapyear1(2024, 2022, 2000, 2002)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "140a345f",
    "metadata": {},
    "outputs": [
@@ -800,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "f109d7c2",
    "metadata": {},
    "outputs": [
@@ -820,12 +915,12 @@
     "    for key, value in kwargs.items():\n",
     "        print(f\"{key}: {value}\")\n",
     "\n",
-    "display_info(name=\"Sumer\", age=25, location=\"Manchanabale\", phone=1234567890)"
+    "display_info(name = \"Sumer\", age = 25, location = \"Manchanabale\", phone = 1234567890)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "5afd7e5b",
    "metadata": {},
    "outputs": [
@@ -860,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "b2403ff9",
    "metadata": {},
    "outputs": [
@@ -870,7 +965,7 @@
        "8"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "id": "614518e0",
    "metadata": {},
    "outputs": [
@@ -892,13 +987,13 @@
        "['palindrom', 'palindrom', 'palindrom', 'not a palindrom']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palindrom = lambda x: ['palindrom' if y == y[::-1] else 'not a palindrom' for y in x]\n",
+    "palindrom = lambda x : ['palindrom' if y == y[::-1] else 'not a palindrom' for y in x]\n",
     "palindrom(['madam','radar', 'level', 'good'])"
    ]
   },
@@ -925,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "47ac4667",
    "metadata": {},
    "outputs": [
@@ -935,7 +1030,7 @@
        "[2, 4, 6, 8, 10]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "c3844e75",
    "metadata": {},
    "outputs": [
@@ -973,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "8375098a",
    "metadata": {},
    "outputs": [
@@ -983,7 +1078,7 @@
        "43"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1103,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
+   "id": "b6bfdb7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 4,\n",
+       " 9,\n",
+       " 16,\n",
+       " 25,\n",
+       " 36,\n",
+       " 49,\n",
+       " 64,\n",
+       " 81,\n",
+       " 100,\n",
+       " 121,\n",
+       " 144,\n",
+       " 169,\n",
+       " 196,\n",
+       " 225,\n",
+       " 256,\n",
+       " 289,\n",
+       " 324,\n",
+       " 361]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sqrt(x):\n",
+    "    return x**2\n",
+    "sqrt(2)\n",
+    "\n",
+    "a = range(1,20)\n",
+    "sqrt = list(map(sqrt, a))\n",
+    "sqrt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5c393e9a",
    "metadata": {},
    "outputs": [
@@ -1026,13 +1166,13 @@
    "source": [
     "ist = [1,2,3,4,5,6,7,8,9,10]\n",
     "\n",
-    "sqrt = list(map(lambda x:x**2, ist))\n",
+    "sqrt = map(lambda x:x**2, ist)\n",
     "sqrt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "id": "b8e39388",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1182,7 @@
        "['', 2, '', 4, '', 6, '', 8, '', 10]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "id": "6442d33a",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1206,7 @@
        "22"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "id": "54fa60a8",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "id": "e4a44ee1",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 62,
    "id": "f8257012",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "id": "386a1950",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1331,7 @@
        "[3, 6, 9]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,23 +1349,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "id": "a37dcf83",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "('madam', 'radar')"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Another example of lambda function\n",
-    "lst = range(20)\n",
-    "evenlst = list(filter(lambda x:x%2==0, lst))\n",
-    "print(evenlst)\n"
+    "m = ['madam', 'radar', 'abcd']\n",
+    "palindrom = tuple(filter(lambda x : x == x[::-1], m))\n",
+    "palindrom\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "621da845",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from functools import  reduce\n",
+    "a = ['listen', 'silent']\n",
+    "\n",
+    "angram = reduce(lambda a, b: sorted(a) == sorted(b), a)\n",
+    "angram"
    ]
   },
   {
