--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "621da845",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
        "True"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,6 +1422,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2d16cfca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['GenericAlias', 'RLock', 'WRAPPER_ASSIGNMENTS', 'WRAPPER_UPDATES', '_CacheInfo', '_HashedSeq', '_NOT_FOUND', '__all__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', '_c3_merge', '_c3_mro', '_compose_mro', '_convert', '_find_impl', '_ge_from_gt', '_ge_from_le', '_ge_from_lt', '_gt_from_ge', '_gt_from_le', '_gt_from_lt', '_initial_missing', '_le_from_ge', '_le_from_gt', '_le_from_lt', '_lru_cache_wrapper', '_lt_from_ge', '_lt_from_gt', '_lt_from_le', '_make_key', '_unwrap_partial', '_unwrap_partialmethod', 'cache', 'cached_property', 'cmp_to_key', 'get_cache_token', 'lru_cache', 'namedtuple', 'partial', 'partialmethod', 'recursive_repr', 'reduce', 'singledispatch', 'singledispatchmethod', 'total_ordering', 'update_wrapper', 'wraps']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FInding All The Avilabel Moduled the Library\n",
+    "import functools\n",
+    "print(dir(functools))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "7d68c40f",
    "metadata": {},
@@ -1430,7 +1450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum 36\n"
+      "Sum 21\n"
      ]
     }
    ],
@@ -1438,7 +1458,7 @@
     "from functools import reduce\n",
     "\n",
     "# Example 1: Summing up a list of numbers\n",
-    "numbers = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "numbers = [1, 2, 3, 4, 5, 6]\n",
     "sum_result = reduce(lambda x, y: x + y, numbers)\n",
     "print(\"Sum\", sum_result)"
    ]
@@ -1466,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "15643754",
    "metadata": {},
    "outputs": [
@@ -1487,17 +1507,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "d58f3553",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def min_value(x,y):\n",
+    "    if x<y:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return y\n",
+    "    \n",
+    "minimum = reduce(min_value, values)\n",
+    "minimum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "dbb2b88b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3628800"
+       "5040"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1554,7 @@
     "def multiply(a,b):\n",
     "    return a*b\n",
     "\n",
-    "n = range(1,11)\n",
+    "n = range(1,8)\n",
     "prod = reduce(multiply, n)\n",
     "prod"
    ]
@@ -1524,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "56cb1b53",
    "metadata": {},
    "outputs": [
@@ -1548,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "778903d4",
    "metadata": {},
    "outputs": [
@@ -1565,6 +1613,33 @@
    "source": [
     "#We can look at the objective of any function by using attribute '.__doc__'\n",
     "print(greet.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "65ed94aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reduce(function, iterable[, initial], /) -> value\n",
+      "\n",
+      "Apply a function of two arguments cumulatively to the items of an iterable, from left to right.\n",
+      "\n",
+      "This effectively reduces the iterable to a single value.  If initial is present,\n",
+      "it is placed before the items of the iterable in the calculation, and serves as\n",
+      "a default when the iterable is empty.\n",
+      "\n",
+      "For example, reduce(lambda x, y: x+y, [1, 2, 3, 4, 5])\n",
+      "calculates ((((1 + 2) + 3) + 4) + 5).\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(reduce.__doc__)"
    ]
   },
   {
@@ -1667,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "a146d24d",
    "metadata": {},
    "outputs": [
@@ -1696,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "72f96e14",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "ea44e897",
    "metadata": {},
    "outputs": [
@@ -1800,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "e56c449a",
    "metadata": {},
    "outputs": [
@@ -1808,12 +1883,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13 is Prime: True\n"
+      "13 is Prime number\n"
      ]
     }
    ],
    "source": [
     "#Example 3: Check if a Number is Prime\n",
+    "def is_prime(a):\n",
+    "    if a < 2: # prime number start from 2\n",
+    "        print(\"Not a prime number\")\n",
+    "    else:\n",
+    "        prime = True\n",
+    "        for i in range(2, a):\n",
+    "            if a % i == 0:\n",
+    "                prime = False\n",
+    "                break\n",
+    "        if prime:\n",
+    "            print(a, \"is Prime number\")\n",
+    "        else:\n",
+    "            print(a, \"is Not a prime number\")\n",
+    "\n",
+    "# Example Usage\n",
+    "check_number = 13\n",
+    "is_prime(check_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "20f905fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def is_prime(number):\n",
     "    if number < 2:\n",
     "        return False\n",
@@ -1822,9 +1934,31 @@
     "            return False\n",
     "    return True\n",
     "\n",
-    "# Example Usage\n",
-    "check_number = 13\n",
-    "print(f\"{check_number} is Prime: {is_prime(check_number)}\")\n"
+    "is_prime(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "7fbaccbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = 23\n",
+    "int(number**0.5) + 1\n",
+    "\n",
+    "23 % 5 ==0"
    ]
   },
   {
@@ -1929,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "94a3c0ff",
    "metadata": {},
    "outputs": [
