--- a/Python_Basics/6.Functions.ipynb
+++ b/Python_Basics/6.Functions.ipynb
@@ -2350,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "22a2367f",
    "metadata": {},
    "outputs": [
@@ -2362,8 +2362,14 @@
       "1. Addition\n",
       "2. Subtraction\n",
       "3. Multiplication\n",
-      "4. Division\n",
-      "The result of addition is: 35.0\n"
+      "4. Division\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of addition is: 32.0\n"
      ]
     }
    ],
@@ -2404,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "04420b34",
    "metadata": {},
    "outputs": [
@@ -2418,13 +2424,9 @@
    ],
    "source": [
     "def factorial(n):\n",
-    "\n",
     "    if n == 0:\n",
-    "\n",
     "        return 1\n",
-    "\n",
     "    else:\n",
-    "\n",
     "        return n * factorial(n - 1)\n",
     "\n",
     "print(factorial(5))"
