--- a/Coding Challenge/Code challenge 3.ipynb
+++ b/Coding Challenge/Code challenge 3.ipynb
@@ -109,6 +109,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def passing_students(grade_dict):\n",
+    "    passed_students = []\n",
+    "    for student, grade_list in grade_dict.items():\n",
+    "        all_passed = True  # Assume the student passed\n",
+    "        for grade in grade_list:\n",
+    "            if grade < 50:\n",
+    "                all_passed = False  # If any grade is below 50, mark as failed\n",
+    "                break  # No need to check further\n",
+    "        if all_passed:\n",
+    "            passed_students.append(student)\n",
+    "    return passed_students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
