--- a/Python_Basics/9.File_Handling/File_handle.ipynb
+++ b/Python_Basics/9.File_Handling/File_handle.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,32 +127,52 @@
     }
    ],
    "source": [
-    "with open(\"test.txt\", 'r') as f:\n",
-    "    content = f.read()\n",
-    "    print(content)"
+    "f = open(r'D:\\Python\\Python_Basics\\9.File_Handling\\test.txt', 'r')\n",
+    "print(f.read())\n",
+    "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\test.txt\", 'w') as f:\n",
-    "    f.write(\"This is a test file.\")\n",
-    "    f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Content before writing: This is a test file.\n",
+      "This is a test file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"test.txt\", 'r') as f:\n",
+    "    content = f.read()\n",
+    "    print(content)\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(r\"D:\\Python\\Python_Basics\\9.File_Handling\\test.txt\", 'w') as f:\n",
+    "    f.write(\"This is a test file.\")\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Content before writing: This is new content.\n",
       "Content after writing: is is new content.\n"
      ]
     }
@@ -164,15 +184,19 @@
     "    print('Content before writing:', content)\n",
     "    \n",
     "    file.seek(0)  # Set file pointer to the beginning\n",
+    "    \n",
     "    file.write('This is new content')  # Overwriting existing content\n",
+    "    \n",
     "    file.seek(2)  # Reset pointer to the beginning again\n",
+    "    \n",
     "    updated_content = file.read()  # Read the updated content\n",
-    "    print('Content after writing:', updated_content)\n"
+    "    print('Content after writing:', updated_content)\n",
+    "    file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +211,9 @@
     "# w+ example: Writing and then reading the file\n",
     "with open('test.txt', 'w+') as file:\n",
     "    file.write('This is a new line of text')  # Writing new content\n",
+    "    \n",
     "    file.seek(0)  # Set file pointer to the beginning\n",
+    "    \n",
     "    content = file.read()  # Reading the content back\n",
     "    print('Content after writing:', content)\n",
     "    file.close()\n"
